--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required (VERSION 2.8)
 # 项目信息
 project (test_cmake1)
 # 指定生成目标
-add_executable(test_cmake test_cmake.cc)
+add_executable(test_cmake test_cmake.c)
