--- a/fileio/CMakeLists.txt
+++ b/fileio/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required (VERSION 2.8)
 
 project (fileio)
 
-aux_source_directory(. DIR_SRCS)
+add_executable (test_open test_open.c)
 
-add_executable (test_open ${DIR_SRCS})
+add_executable (test2 test2.c)
