--- a/fileio/CMakeLists.txt
+++ b/fileio/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 2.8)
 
 project (fileio)
 
+add_executable (test_create test_create.c)
+
 add_executable (test_open test_open.c)
 
-add_executable (test2 test2.c)
